--- a/libraries/package.json
+++ b/libraries/package.json
@@ -9,9 +9,33 @@
   "devDependencies": {
     "async": "^2.0.1",
     "chalk": "^1.1.3",
+    "eslint": "^3.12.2",
     "grunt": "^1.0.1",
     "indent-string": "^3.0.0",
     "ora": "^0.2.3",
     "time-grunt": "^1.4.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true
+    },
+		"parserOptions": {
+			"ecmaVersion": 6
+		},
+    "extends": [
+      "eslint:recommended"
+    ],
+		"rules": {
+			"semi": 2,
+      "no-use-before-define": 2,
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "always",
+          "named": "never",
+          "asyncArrow": "ignore"
+        }
+      ]
+		}
   }
 }
