--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -8,7 +8,8 @@
     "build": "webpack -p",
     "lint": "eslint kevoree-core.js lib",
     "prepublish": "npm run test && npm run build",
-    "test": "npm run lint && mocha test/server"
+    "pretest": "npm run lint",
+    "test": "mocha test/server"
   },
   "keywords": [
     "kevoree",
@@ -27,17 +28,20 @@
     "kevoree-library": "^5.0.11"
   },
   "devDependencies": {
+    "eslint": "^3.18.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
-    "webpack": "^3.3.0",
+    "webpack": "^3.4.1",
+    "kevoree-const": "^2.0.0",
     "kevoree-kevscript": "^5.0.0",
-    "kevoree-logger": "^1.0.0-alpha",
+    "kevoree-entities": "^9.2.1",
+    "kevoree-logger": "^1.0.0",
     "kevoree-registry-client": "^3.0.0",
     "kevoree-validator": "^0.1.18",
     "mocha": "^3.4.2",
     "tiny-conf": "^1.1.0",
-    "webpack": "^3.3.0"
+    "webpack": "^3.4.1"
   },
   "license": "LGPL-3.0",
   "homepage": "https://github.com/kevoree/kevoree-js-core"
