--- a/libraries/comp/ticker/.eslintrc
+++ b/libraries/comp/ticker/.eslintrc
@@ -1,9 +1,8 @@
 ---
 root: true
+extends: eslint:recommended
 parserOptions:
   ecmaVersion: 6
-extends:
-- eslint:recommended
 env:
   node: true
 globals:
@@ -31,3 +30,5 @@ rules:
     - typeof: true
   no-var: 2
   prefer-const: 2
+  no-console: 2
+  arrow-parens: 2
