--- a/libraries/comp/ticker/package.json
+++ b/libraries/comp/ticker/package.json
@@ -8,11 +8,17 @@
     "browser": "src/browser/main.js"
   },
   "scripts": {
-    "prepublish": "npm run lint && NODE_ENV=production grunt",
-    "postpublish": "grunt kevoree_registry",
-    "lint": "grunt eslint",
-    "build": "grunt webpack",
-    "build-prod": "NODE_ENV=production grunt webpack"
+    "lint": "eslint lib browser.js test",
+    "webpack": "webpack -p --progress",
+    "prebuild": "npm run lint",
+    "build": "kevoree-scripts build",
+    "postbuild": "npm run webpack",
+    "prestart": "npm run build",
+    "start": "kevoree-scripts start",
+    "prekev:publish": "npm run build",
+    "kev:publish": "kevoree-scripts publish",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run kev:publish"
   },
   "keywords": [
     "kevoree-std-lib",
@@ -24,26 +30,22 @@
     "kevoree-entities": "^9.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.16.0",
-    "eslint": "^3.9.1",
+    "eslint": "^3.18.0",
     "eslint-config-standard-jsx": "^3.2.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.7.1",
-    "grunt": "^1.0.1",
-    "grunt-eslint": "^19.0.0",
-    "grunt-kevoree": "^6.0.0",
-    "grunt-kevoree-genmodel": "^3.0.3",
-    "grunt-kevoree-registry": "^4.0.0",
-    "grunt-webpack": "^3.0.0",
+    "expect": "^1.20.2",
     "json-loader": "^0.5.4",
-    "kevoree-core": "^9.0.7",
-    "load-grunt-tasks": "^3.5.2",
-    "react": "^15.4.1",
-    "webpack": "^2.5.1"
+    "kevoree-scripts": "^1.0.0",
+    "mocha": "^3.4.2",
+    "webpack": "^3.4.1",
+    "react": "^15.4.1"
   },
   "repository": {
     "type": "git",
