--- a/tools/kevoree-kevscript/package.json
+++ b/tools/kevoree-kevscript/package.json
@@ -39,7 +39,7 @@
   "homepage": "https://github.com/kevoree/kevoree-js-kevscript",
   "dependencies": {
     "chalk": "^1.1.3",
-    "kevoree-logger": "^1.0.0-alpha",
+    "kevoree-logger": "^1.0.0",
     "kevoree-const": "^2.0.0",
     "kevoree-library": "^5.0.11",
     "kevoree-registry-client": "^3.0.0",
@@ -53,13 +53,13 @@
     "waxeye": "^0.8.1"
   },
   "devDependencies": {
-    "webpack": "^3.3.0",
+    "webpack": "^3.4.1",
     "expect": "^1.20.2",
     "express": "^4.14.0",
     "mocha": "^3.4.2",
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
-    "webpack": "^3.3.0",
+    "webpack": "^3.4.1",
     "webpack-dev-server": "^2.5.1"
   },
   "eslintConfig": {
