--- a/tools/kevoree-logger/package.json
+++ b/tools/kevoree-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-logger",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0",
   "description": "Kevoree logger based on Winston",
   "scripts": {
     "test": "echo \"no tests\""
