--- a/tools/kevoree-resolvers/package.json
+++ b/tools/kevoree-resolvers/package.json
@@ -4,6 +4,8 @@
   "description": "Standard Kevoree Javascript resolvers",
   "main": "./kevoree-resolvers.js",
   "scripts": {
+    "lint": "eslint kevoree-resolvers.js lib",
+    "pretest": "npm run lint",
     "test": "mocha"
   },
   "repository": {
@@ -31,7 +33,8 @@
     "rimraf": "^2.6.1"
   },
   "devDependencies": {
-    "webpack": "^3.3.0",
+    "kevoree-logger": "^1.0.0",
+    "webpack": "^3.4.1",
     "kevoree-library": "^5.0.11",
     "mocha": "^3.4.2"
   },
