--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,7 @@
     "libraries/comp/proxy",
     "libraries/comp/ticker",
     "libraries/node/javascript",
+    "libraries/group/centralizedws",
     "libraries/chan/local"
   ]
 }
