--- a/libraries/group/centralizedws/package.json
+++ b/libraries/group/centralizedws/package.json
@@ -4,9 +4,19 @@
   "description": "WebSocket group based on a centralized architecture that only sends partial model to connected clients",
   "main": "./lib/CentralizedWSGroup.js",
   "scripts": {
+    "lint": "eslint lib ws-shim.js browser.js test",
+    "webpack": "webpack -p --progress",
+    "prebuild": "npm run lint",
+    "build": "kevoree-scripts build",
+    "postbuild": "npm run webpack",
+    "prestart": "npm run build",
+    "start": "kevoree-scripts start",
+    "pretest": "npm run lint",
     "test": "mocha",
-    "prepublishOnly": "npm run lint && grunt publish",
-    "lint": "eslint lib test"
+    "prekev:publish": "npm run build",
+    "kev:publish": "kevoree-scripts publish",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run kev:publish"
   },
   "kevoree": {
     "namespace": "kevoree"
@@ -25,18 +35,17 @@
     "utf-8-validate": "^2.0.0"
   },
   "devDependencies": {
-    "csv-write-stream": "^2.0.0",
-    "eslint": "^3.12.2",
-    "grunt": "^1",
-    "grunt-eslint": "^19.0.0",
-    "grunt-kevoree": "^6.0.0",
-    "grunt-kevoree-genmodel": "^3.0.3",
-    "grunt-kevoree-registry": "^4.0.0",
-    "grunt-webpack": "^3.0.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^3.18.0",
+    "expect": "^1.20.2",
     "json-loader": "^0.5.4",
-    "load-grunt-tasks": "^3.5.2",
-    "mocha": "^3.2.0",
-    "webpack": "^3.4.1"
+    "kevoree-scripts": "^1.0.0",
+    "mocha": "^3.4.2",
+    "webpack": "^3.4.1",
+    "csv-write-stream": "^2.0.0",
+    "mocha": "^3.4.2"
   },
   "repository": {
     "type": "git",
