--- a/tools/kevoree-scripts/package.json
+++ b/tools/kevoree-scripts/package.json
@@ -24,20 +24,24 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js-scripts#readme",
   "dependencies": {
+    "eslint": "^3.18.0",
     "webpack": "^3.4.1",
+    "fs-extra": "^4.0.1",
     "cli-table": "^0.3.1",
+    "babel-core": "^6.25.0",
+    "json-loader": "^0.5.4",
     "cross-spawn": "^5.1.0",
+    "lodash.merge": "^4.6.0",
+    "babel-loader": "^7.1.1",
     "kevoree-core": "^9.0.7",
     "kevoree-hash": "^3.0.1",
     "kevoree-const": "^2.0.0",
     "kevoree-logger": "^1.0.0",
     "kevoree-library": "^5.0.11",
+    "babel-preset-env": "^1.6.0",
     "kevoree-kevscript": "^5.0.0",
     "kevoree-resolvers": "^5.0.0",
     "kevoree-gen-model": "^3.0.20",
     "kevoree-registry-client": "^3.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.18.0"
   }
 }
