--- a/core/kevoree-const/package.json
+++ b/core/kevoree-const/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.0",
   "description": "Kevoree JS constants",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"no tests\""
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kevoree/kevoree-js.git"
