--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -3,7 +3,7 @@
   "version": "9.2.1",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
-  "main": "./kevoree-entities.js",
+  "main": "kevoree-entities.js",
   "typings": "kevoree-entities.d.ts",
   "scripts": {
     "prepublish": "npm test",
