--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "postinstall": "npm run bs"
   },
   "devDependencies": {
-    "lerna": "^2.0.0-rc.5"
+    "lerna": "^2.0.0"
   },
   "description": "Kevoree written in JavaScript",
   "repository": "https://github.com/kevoree/kevoree-js",
   "license": "LGPL-3.0",
-  "dependencies": {
-    "tiny-conf-plugin-file": "^1.1.1"
-  }
+  "dependencies": {}
 }
