--- a/tools/kevoree-hash/package.json
+++ b/tools/kevoree-hash/package.json
@@ -29,8 +29,8 @@
     ]
   },
   "devDependencies": {
-    "webpack": "^3.4.1",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "webpack": "^3.4.1"
   },
   "dependencies": {
     "pkg-hash": "^3.0.0"
