--- a/core/kevoree-entities/package.json
+++ b/core/kevoree-entities/package.json
@@ -28,12 +28,12 @@
     "url": "https://github.com/kevoree/kevoree-js"
   },
   "devDependencies": {
-    "mocha": "^3.4.2",
     "eslint": "^4.3.0",
-    "eslint-config-kevoree": "^1.0.0"
+    "eslint-config-kevoree": "^1.0.0",
+    "mocha": "^3.4.2"
   },
   "dependencies": {
-    "kevoree-library": "^5.0.0",
+    "kevoree-library": "^5.0.12",
     "pseudoclass": "^1.0.3"
   },
   "license": "LGPL-3.0"
