--- a/libraries/group/centralizedws/package.json
+++ b/libraries/group/centralizedws/package.json
@@ -7,12 +7,10 @@
     "prestart": "npm run build",
     "pretest": "npm run build",
     "prepublishOnly": "npm run test",
-
     "start": "kevoree-scripts start",
     "build": "kevoree-scripts build",
     "test": "mocha test",
     "kev:publish": "kevoree-scripts publish",
-
     "postpublish": "npm run kev:publish"
   },
   "kevoree": {
@@ -22,8 +20,8 @@
     "ws": "./ws-shim.js"
   },
   "dependencies": {
-    "kevoree-entities": "^9.2.1",
-    "kevoree-library": "^5.0.11",
+    "kevoree-entities": "^9.2.2",
+    "kevoree-library": "^5.0.12",
     "rwebsocket": "^1.0.1",
     "ws": "^1.1.1"
   },
@@ -32,12 +30,12 @@
     "utf-8-validate": "^2.0.0"
   },
   "devDependencies": {
-    "mocha": "^3.4.2",
-    "expect": "^1.20.2",
+    "csv-write-stream": "^2.0.0",
     "eslint": "^4.3.0",
     "eslint-config-kevoree": "^1.0.0",
+    "expect": "^1.20.2",
     "kevoree-scripts": "^1.0.0",
-    "csv-write-stream": "^2.0.0"
+    "mocha": "^3.4.2"
   },
   "repository": {
     "type": "git",
