--- a/libraries/node/javascript/package.json
+++ b/libraries/node/javascript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-node-javascript",
-  "version": "5.5.0-alpha.3",
+  "version": "5.5.0",
   "main": "./lib/JavascriptNode.js",
   "kevoree": {
     "namespace": "kevoree"
@@ -9,12 +9,10 @@
     "prestart": "npm run build",
     "pretest": "npm run build",
     "prepublishOnly": "npm run test",
-
     "start": "kevoree-scripts start",
     "build": "kevoree-scripts build",
     "test": "mocha test",
     "kev:publish": "kevoree-scripts publish",
-
     "postpublish": "npm run kev:publish"
   },
   "description": "Kevoree JS standard node platform",
@@ -34,16 +32,16 @@
     "url": "https://github.com/kevoree/kevoree-js-node-javascript"
   },
   "dependencies": {
-    "kevoree-entities": "^9.2.1",
-    "kevoree-library": "^5.0.11",
+    "kevoree-entities": "^9.2.2",
+    "kevoree-library": "^5.0.12",
     "times-up": "^1.0.1"
   },
   "devDependencies": {
-    "mocha": "^3.4.2",
-    "expect": "^1.20.2",
     "eslint": "^4.3.0",
     "eslint-config-kevoree": "^1.0.0",
-    "kevoree-scripts": "^1.0.0"
+    "expect": "^1.20.2",
+    "kevoree-scripts": "^1.0.0",
+    "mocha": "^3.4.2"
   },
   "engines": {
     "node": "*"
