--- a/tools/kevoree-gen-model/package.json
+++ b/tools/kevoree-gen-model/package.json
@@ -14,15 +14,15 @@
     "async": "^2.5.0",
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
-    "kevoree-entities": "^9.2.1",
-    "kevoree-hash": "^3.0.1",
-    "kevoree-library": "^5.0.11",
-    "kevoree-validator": "^0.1.18",
+    "kevoree-entities": "^9.2.2",
+    "kevoree-hash": "^3.0.2",
+    "kevoree-library": "^5.0.12",
+    "kevoree-validator": "^0.1.19",
     "optimist": "^0.6.1"
   },
   "devDependencies": {
-    "webpack": "^3.4.1",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "webpack": "^3.4.1"
   },
   "keywords": [
     "kevoree",
