--- a/tools/kevoree-logger/package.json
+++ b/tools/kevoree-logger/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js#readme",
   "dependencies": {
-    "winston": "^2.3.1",
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^4.3.0",
