--- a/tools/kevoree-resolvers/package.json
+++ b/tools/kevoree-resolvers/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js-resolvers",
   "dependencies": {
-    "kevoree-hash": "^3.0.1",
+    "kevoree-hash": "^3.0.2",
     "mkdirp": "^0.5.1",
     "npm-package-arg": "^4.2.0",
     "rimraf": "^2.6.1"
@@ -35,11 +35,11 @@
   "devDependencies": {
     "eslint": "^4.3.0",
     "eslint-config-kevoree": "^1.0.0",
+    "kevoree-library": "^5.0.12",
     "kevoree-logger": "^1.0.0",
-    "webpack": "^3.4.1",
-    "kevoree-library": "^5.0.11",
     "mocha": "^3.4.2",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "webpack": "^3.4.1"
   },
   "maintainers": [
     {
