--- a/tools/kevoree-scripts/package.json
+++ b/tools/kevoree-scripts/package.json
@@ -24,26 +24,26 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js-scripts#readme",
   "dependencies": {
-    "eslint": "^4.3.0",
-    "eslint-config-kevoree": "^1.0.0",
-    "webpack": "^3.4.1",
-    "fs-extra": "^4.0.1",
-    "cli-table": "^0.3.1",
-    "cross-spawn": "^5.1.0",
-    "lodash.merge": "^4.6.0",
     "babel-core": "^6.25.0",
-    "json-loader": "^0.5.4",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
-    "kevoree-core": "^9.0.7",
-    "kevoree-hash": "^3.0.1",
+    "cli-table": "^0.3.1",
+    "cross-spawn": "^5.1.0",
+    "eslint": "^4.3.0",
+    "eslint-config-kevoree": "^1.0.0",
+    "fs-extra": "^4.0.1",
+    "json-loader": "^0.5.4",
     "kevoree-const": "^2.0.0",
-    "kevoree-logger": "^1.0.0",
-    "kevoree-library": "^5.0.11",
-    "kevoree-kevscript": "^5.0.0",
-    "kevoree-resolvers": "^5.0.0",
+    "kevoree-core": "^9.0.7",
     "kevoree-gen-model": "^3.0.20",
+    "kevoree-hash": "^3.0.2",
+    "kevoree-kevscript": "^5.0.0",
+    "kevoree-library": "^5.0.12",
+    "kevoree-logger": "^1.0.0",
     "kevoree-module-loader": "^1.0.0",
-    "kevoree-registry-client": "^3.0.0"
+    "kevoree-registry-client": "^3.0.0",
+    "kevoree-resolvers": "^5.0.1",
+    "lodash.merge": "^4.6.0",
+    "webpack": "^3.4.1"
   }
 }
