fix kevoree-cli errors due to DI modifications in core/kevscript/etc

--- a/libraries/group/centralizedws/.gitignore
+++ b/libraries/group/centralizedws/.gitignore
@@ -2,5 +2,5 @@ node_modules
 yarn.lock
 # Kevoree JS
 kevlib.json
-browser/kevoree-comp-consoleprinter*.js
+browser/kevoree-group-centralizedws.js
 dist
