--- a/tools/kevoree-cli/package.json
+++ b/tools/kevoree-cli/package.json
@@ -35,6 +35,8 @@
     "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
+    "eslint": "^4.4.1",
+    "eslint-config-kevoree": "^1.0.1",
     "webpack": "^3.4.1"
   },
   "license": "LGPL-3.0",
