--- a/tools/cm-kevscript/package.json
+++ b/tools/cm-kevscript/package.json
@@ -5,9 +5,10 @@
   "main": "src/mode/kevscript.js",
   "browser": "dist/mode.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server",
-    "lint": "eslint src",
-    "build": "webpack -p --progress"
+    "start": "NODE_ENV=development webpack-dev-server --config=webpack.config.demo.js",
+    "lint": "eslint src demo",
+    "build": "webpack -p",
+    "build-demo": "webpack --config=webpack.config.demo.js -p"
   },
   "repository": {
     "type": "git",
@@ -28,9 +29,10 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "codemirror": "^5.27.2",
     "css-loader": "^0.28.4",
-    "eslint": "^4.3.0",
+    "eslint": "^4.4.1",
     "eslint-config-kevoree": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.29.0",
@@ -38,9 +40,13 @@
     "kevoree-library": "^5.0.13",
     "kevoree-registry-client": "^3.0.1",
     "kevoree-validator": "^0.1.20",
+    "prop-types": "^15.5.10",
     "style-loader": "^0.18.2",
     "tiny-conf": "^1.1.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.5.1"
+  },
+  "dependencies": {
+    "eslint-plugin-react": "^7.1.0"
   }
 }
