--- a/tools/atom-language-kevscript/package.json
+++ b/tools/atom-language-kevscript/package.json
@@ -4,7 +4,7 @@
   "description": "KevScript language support in Atom",
   "main": "lib/main.js",
   "scripts": {
-    "publish": "apm publish --tag $(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\", ]//g')"
+    "publish": "apm publish --tag \"language-kevscript@$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\", ]//g')\""
   },
   "keywords": [
     "kevoree",
