--- a/libraries/chan/local/package.json
+++ b/libraries/chan/local/package.json
@@ -35,10 +35,10 @@
   "license": "LGPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kevoree/kevoree-js-chan-local.git"
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
   "bugs": {
-    "url": "https://github.com/kevoree/kevoree-js-chan-local/issues"
+    "url": "https://github.com/kevoree/kevoree-js/issues"
   },
-  "homepage": "https://github.com/kevoree/kevoree-js-chan-local"
+  "homepage": "https://github.com/kevoree/kevoree-js"
 }
