--- a/libraries/chan/remotews/package.json
+++ b/libraries/chan/remotews/package.json
@@ -10,41 +10,39 @@
     "ws": "./node_modules/rwebsocket/browser/ws-shim.js"
   },
   "scripts": {
-    "build": "webpack",
-    "prepublish": "npm run lint && NODE_ENV=production grunt",
-    "postpublish": "grunt publish",
-    "lint": "eslint lib browser.js"
+    "prestart": "npm run build",
+    "pretest": "npm run build",
+    "prepublishOnly": "npm run test",
+    "start": "kevoree-scripts start",
+    "build": "kevoree-scripts build",
+    "test": "mocha test",
+    "kev:publish": "kevoree-scripts publish",
+    "postpublish": "npm run kev:publish"
+  },
+  "dependencies": {
+    "kevoree-entities": "^9.2.3",
+    "rwebsocket": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.3.0",
+    "eslint-config-kevoree": "^1.0.1",
+    "kevoree-scripts": "^1.0.6",
+    "mocha": "^3.4.2"
   },
   "keywords": [
     "kevoree-std-lib",
     "kevoree",
     "library",
-    "chan"
+    "channel"
   ],
-  "dependencies": {
-    "kevoree-entities": "^9.2.1",
-    "rwebsocket": "^1.1.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "grunt": "^1.0.1",
-    "grunt-kevoree": "^6.0.0",
-    "grunt-kevoree-genmodel": "^3.0.3",
-    "grunt-kevoree-registry": "^4.0.0",
-    "grunt-webpack": "^3.0.0",
-    "json-loader": "^0.5.4",
-    "load-grunt-tasks": "^3.5.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:kevoree/kevoree-js-chan-remotews.git"
-  },
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/kevoree/kevoree-js-chan-remotews/issues"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
-  "homepage": "https://github.com/kevoree/kevoree-js-chan-remotews"
+  "bugs": {
+    "url": "https://github.com/kevoree/kevoree-js/issues"
+  },
+  "homepage": "https://github.com/kevoree/kevoree-js"
 }
