--- a/core/kevoree-core/package.json
+++ b/core/kevoree-core/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "eslint": "^4.3.0",
+    "eslint-config-kevoree": "^1.0.1",
     "kevoree-const": "^2.0.1",
     "kevoree-entities": "^9.2.3",
     "kevoree-kevscript": "^5.0.5",
