--- a/tools/kevoree-cli/package.json
+++ b/tools/kevoree-cli/package.json
@@ -24,9 +24,8 @@
     "kevoree-logger": "^1.0.2",
     "kevoree-registry-client": "^3.0.1",
     "kevoree-resolvers": "^5.0.4",
-    "mkdirp": "^0.5.1",
     "ora": "^1.3.0",
-    "rmrf": "^1.0.2",
+    "fs-extra": "^4.0.1",
     "tiny-conf": "^1.1.0",
     "tiny-conf-plugin-argv": "^1.1.0",
     "tiny-conf-plugin-file": "^1.1.2",
