add Twitter to std lib + change the way browser bundles are handle (making them optional if needed)

--- a/libraries/chan/local/package.json
+++ b/libraries/chan/local/package.json
@@ -4,7 +4,8 @@
   "main": "./lib/LocalChannel.js",
   "description": "Kevoree channel that only sends messages to components in the same node",
   "kevoree": {
-    "namespace": "kevoree"
+    "namespace": "kevoree",
+    "browser": "lib/browser.js"
   },
   "scripts": {
     "prestart": "npm run build",
