--- a/lerna.json
+++ b/lerna.json
@@ -9,6 +9,7 @@
     "libraries/chan/remotews",
     "libraries/comp/ticker",
     "libraries/comp/consoleprinter",
+    "libraries/comp/twitter",
     "libraries/group/centralizedws",
     "libraries/group/remotews"
   ]
