--- a/libraries/chan/remotews/package.json
+++ b/libraries/chan/remotews/package.json
@@ -4,7 +4,8 @@
   "main": "./lib/RemoteWSChan.js",
   "description": "A Kevoree chan that uses an external remote WebSocket broadcast server to share messages",
   "kevoree": {
-    "namespace": "kevoree"
+    "namespace": "kevoree",
+    "browser": "lib/browser.js"
   },
   "browser": {
     "ws": "./node_modules/rwebsocket/browser/ws-shim.js"
