--- a/libraries/comp/consoleprinter/package.json
+++ b/libraries/comp/consoleprinter/package.json
@@ -3,7 +3,8 @@
   "version": "5.3.12",
   "main": "lib/ConsolePrinter.js",
   "kevoree": {
-    "namespace": "kevoree"
+    "namespace": "kevoree",
+    "browser": "lib/browser.js"
   },
   "scripts": {
     "prestart": "npm run build",
