--- a/libraries/comp/ticker/package.json
+++ b/libraries/comp/ticker/package.json
@@ -4,7 +4,8 @@
   "description": "A Kevoree component that sends a 'tick' message at user-defined intervals",
   "main": "lib/Ticker.js",
   "kevoree": {
-    "namespace": "kevoree"
+    "namespace": "kevoree",
+    "browser": "lib/browser.js"
   },
   "scripts": {
     "prestart": "npm run build",
@@ -35,12 +36,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kevoree/kevoree-js-comp-ticker.git"
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "license": "LGPL-3.0",
   "bugs": {
-    "url": "https://github.com/kevoree/kevoree-js-comp-ticker/issues"
+    "url": "https://github.com/kevoree/kevoree-js/issues"
   },
-  "homepage": "https://github.com/kevoree/kevoree-js-comp-ticker"
+  "homepage": "https://github.com/kevoree/kevoree-js"
 }
