--- a/libraries/comp/twitter/package.json
+++ b/libraries/comp/twitter/package.json
@@ -1,33 +1,47 @@
 {
   "name": "kevoree-comp-twitter",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha",
   "description": "Tweets input messages and streams Tweets based on hashtags (comma-separated)",
   "main": "lib/Twitter.js",
   "kevoree": {
     "namespace": "kevoree"
   },
   "scripts": {
-    "prepublish": "grunt"
+    "prestart": "npm run build",
+    "pretest": "npm run build",
+    "prepublishOnly": "npm run test",
+    "start": "kevoree-scripts start",
+    "build": "kevoree-scripts build",
+    "test": "mocha test",
+    "kev:publish": "kevoree-scripts publish",
+    "postpublish": "npm run kev:publish"
   },
   "keywords": [
+    "kevoree-std-lib",
     "kevoree",
+    "twitter",
     "component"
   ],
   "dependencies": {
-    "kevoree-entities": "^9.2.1",
-    "twitter": "^1.3.0"
+    "kevoree-entities": "^9.2.3",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "grunt": "^1",
-    "grunt-kevoree": "^5.9.0-alpha.2",
-    "grunt-kevoree-genmodel": "^3.0.3",
-    "grunt-kevoree-registry": "^3",
-    "load-grunt-tasks": "^3"
+    "babel-preset-react": "^6.16.0",
+    "eslint": "^4.3.0",
+    "eslint-config-kevoree": "^1.0.1",
+    "kevoree-scripts": "^1.0.9",
+    "mocha": "^3.4.2",
+    "react": "^15.4.1"
   },
-  "repository": "https://github.com/kevoree/kevoree-js-comp-twitter",
-  "author": {
-    "name": "Maxime Tricoire",
-    "email": "max.tricoire@gmail.com"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kevoree/kevoree-js.git"
   },
-  "license": "LGPL-3.0"
+  "author": "Maxime Tricoire <max.tricoire@gmail.com>",
+  "license": "LGPL-3.0",
+  "bugs": {
+    "url": "https://github.com/kevoree/kevoree-js/issues"
+  },
+  "homepage": "https://github.com/kevoree/kevoree-js"
 }
