--- a/libraries/comp/msgsender/package.json
+++ b/libraries/comp/msgsender/package.json
@@ -1,30 +1,36 @@
 {
   "name": "kevoree-comp-msgsender",
-  "version": "1.0.1",
+  "version": "2.0.0-alpha",
   "main": "./lib/MsgSender.js",
   "kevoree": {
-    "namespace": "kevoree"
+    "namespace": "kevoree",
+    "browser": "lib/browser.js"
   },
   "scripts": {
-    "prepublish": "grunt",
-    "postpublish": "grunt publish"
+    "prestart": "npm run build",
+    "pretest": "npm run build",
+    "prepublishOnly": "npm run test",
+    "start": "kevoree-scripts start",
+    "build": "kevoree-scripts build",
+    "test": "mocha test",
+    "kev:publish": "kevoree-scripts publish",
+    "postpublish": "npm run kev:publish"
   },
   "keywords": [
     "kevoree-std-lib",
     "kevoree",
-    "library",
-    "comp"
+    "send",
+    "component"
   ],
   "dependencies": {
-    "kevoree-entities": "^9.2.1"
+    "kevoree-entities": "^9.2.3"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-kevoree": "^5.9.0-alpha.2",
-    "grunt-kevoree-genmodel": "^3.0.3",
-    "grunt-kevoree-registry": "^3.0.1"
+    "babel-preset-react": "^6.16.0",
+    "eslint": "^4.3.0",
+    "eslint-config-kevoree": "^1.0.1",
+    "kevoree-scripts": "^1.0.11",
+    "mocha": "^3.4.2",
+    "react": "^15.4.1"
   }
 }
