--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "libraries/comp/ticker",
     "libraries/comp/consoleprinter",
     "libraries/comp/twitter",
+    "libraries/comp/msgsender",
     "libraries/group/centralizedws",
     "libraries/group/remotews"
   ],
