--- a/tools/kevoree-kevscript/package.json
+++ b/tools/kevoree-kevscript/package.json
@@ -49,7 +49,8 @@
     "tiny-conf": "^1.1.0",
     "tiny-conf-plugin-argv": "^1.1.0",
     "tiny-conf-plugin-file": "^1.1.2",
-    "waxeye": "^0.8.1"
+    "waxeye": "^0.8.1",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
