--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "libraries/chan/remotews",
     "libraries/comp/ticker",
     "libraries/comp/consoleprinter",
-    "libraries/comp/twitter",
+    "libraries/comp/tweet",
     "libraries/comp/msgsender",
     "libraries/group/centralizedws",
     "libraries/group/remotews"
