--- a/libraries/comp/consoleprinter/package.json
+++ b/libraries/comp/consoleprinter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-comp-consoleprinter",
-  "version": "5.3.20-alpha",
+  "version": "5.3.20",
   "main": "lib/ConsolePrinter.js",
   "kevoree": {
     "namespace": "kevoree",
