--- a/tools/kevoree-scripts/package.json
+++ b/tools/kevoree-scripts/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.16",
   "description": "Configuration and scripts for Kevoree",
   "scripts": {
-    "test": "echo \"no tests\""
+    "test": "echo \"no tests\"",
+    "watch": "webpack --config browser-tester/webpack.config.js --watch"
   },
   "bin": {
     "kevoree-scripts": "./bin/kevoree-scripts.js"
@@ -48,10 +49,12 @@
     "webpack": "^3.4.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "eslint-plugin-import": "^2.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-resizable": "^1.7.5",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
   }
