--- a/tools/kevoree-scripts/package.json
+++ b/tools/kevoree-scripts/package.json
@@ -25,7 +25,6 @@
   },
   "homepage": "https://github.com/kevoree/kevoree-js-scripts#readme",
   "dependencies": {
-    "express": "^4.15.5",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
@@ -33,6 +32,7 @@
     "cross-spawn": "^5.1.0",
     "eslint": "^4.3.0",
     "eslint-config-kevoree": "^1.0.1",
+    "express": "^4.15.5",
     "fs-extra": "^4.0.1",
     "json-loader": "^0.5.4",
     "kevoree-const": "^2.0.1",
@@ -49,6 +49,7 @@
     "webpack": "^3.4.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint-plugin-import": "^2.7.0",
     "prop-types": "^15.6.0",
