--- a/tools/browser-runtime/package.json
+++ b/tools/browser-runtime/package.json
@@ -54,7 +54,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "echo \"no test\""
   },
   "devDependencies": {
     "babel-preset-stage-1": "^6.24.1",
