--- a/libraries/comp/chart/package.json
+++ b/libraries/comp/chart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-comp-chart",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0",
   "main": "./lib/Chart.js",
   "description": "Displays received inputs in a chart (the chart is only available for browser runtimes)",
   "kevoree": {
@@ -25,13 +25,13 @@
     "comp"
   ],
   "dependencies": {
-    "kevoree-entities": "^9.2.1"
+    "kevoree-entities": "^9.2.4"
   },
   "devDependencies": {
     "babel-preset-react": "^6.16.0",
     "eslint": "^4.3.0",
     "eslint-config-kevoree": "^1.0.1",
-    "kevoree-scripts": "^1.0.16",
+    "kevoree-scripts": "^1.1.0",
     "mocha": "^3.4.2",
     "react": "^15.4.1",
     "react-dom": "^16.0.0",
