--- a/tools/kevoree-scripts/package.json
+++ b/tools/kevoree-scripts/package.json
@@ -46,16 +46,16 @@
     "kevoree-registry-client": "^3.0.1",
     "kevoree-resolvers": "^5.0.4",
     "lodash.merge": "^4.6.0",
-    "webpack": "^3.4.1"
-  },
-  "devDependencies": {
+    "webpack": "^3.4.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint-plugin-import": "^2.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-resizable": "^1.7.5",
+    "react-resizable": "^1.7.5"
+  },
+  "devDependencies": {
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
   }
