--- a/tools/kevoree-scripts/package.json
+++ b/tools/kevoree-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-scripts",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Configuration and scripts for Kevoree",
   "scripts": {
     "test": "echo \"no tests\"",
@@ -27,11 +27,14 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "cli-table": "^0.3.1",
     "cross-spawn": "^5.1.0",
     "eslint": "^4.3.0",
     "eslint-config-kevoree": "^1.0.1",
+    "eslint-plugin-import": "^2.7.0",
     "express": "^4.15.5",
     "fs-extra": "^4.0.1",
     "json-loader": "^0.5.4",
@@ -46,14 +49,11 @@
     "kevoree-registry-client": "^3.0.1",
     "kevoree-resolvers": "^5.0.4",
     "lodash.merge": "^4.6.0",
-    "webpack": "^3.4.1",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint-plugin-import": "^2.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-resizable": "^1.7.5"
+    "react-resizable": "^1.7.5",
+    "webpack": "^3.4.1"
   },
   "devDependencies": {
     "webpack-dev-middleware": "^1.12.0",
